# cloud_tinamic

./: go.mod  go.sum
app/: main.go
app/logger/: logger.go
config/: config.go  model.conf  tinamic.toml
idl/: auth.thrift  base.thrift  collection.thrift  geo.thrift  processor.thrift  service.thrift  source.thrift  user.thrift  vector.thrift
kitex_gen/base/: base.go  k-base.go
kitex_gen/service/: k-service.go  service.go
pkg/: const.go
pkg/errors/: error.go
pkg/pg/: config.go  pg.go
pkg/storage/: minio.go  minio_test.go
pkg/util/: util.go
rpc/auth/: build.sh  handler.go  kitex_info.yaml  main.go  wire.go  wire_gen.go
rpc/geo/: Cargo.toml  city.parquet  volo.yml
rpc/geo/config/: config.toml  gdal_config.ini
rpc/geo/src/: config.rs  db.rs  gdal_config.rs  handler.rs  lib.rs  minio.rs  service.rs  util.rs
rpc/geo/src/programs/: config.rs  destination.rs  mod.rs  util.rs
rpc/geo/src/programs/raster/: mod.rs  rasterize.rs  translate.rs
rpc/geo/src/programs/vector/: mod.rs  vector_translate.rs
rpc/geo/temp/: ╛┼╢╬╧▀.dbf  ╛┼╢╬╧▀.shp  ╛┼╢╬╧▀.shx
rpc/geo/volo-gen/: volo.yml
rpc/service_collection/: build.sh  client.go  handler.go  kitex_info.yaml  main.go  wire.go  wire_gen.go
rpc/source/: build.sh  client.go  handler.go  handler.test.go  kitex_info.yaml  main.go  wire.go  wire_gen.go
rpc/user/: build.sh  encryption.go  handler.go  kitex_info.yaml  main.go  wire.go  wire_gen.go
rpc/vector_service/: build.sh  handler.go  kitex_info.yaml  main.go  wire.go  wire_gen.go
rpc/workflow/: client.go  vector_activities.go  workflow.go
(+119 files in other folders)
