[package]
name = "geo_storage"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volo-gen = { path = "./volo-gen" }

volo.workspace = true
volo-thrift.workspace = true
pilota.workspace = true

anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }

gdal = "0.17.0"
gdal-sys = "0.10.0"
wkb-raster = "0.2.1"
serde = { version = "1.0.197", features = ["derive"] }
log = "0.4.21"
bytes = "1.6.0"
regex = "1.10.4"
thiserror = "1.0.58"
libc = "0.2.153"
lazy_static = "1.4.0"
deadpool-postgres = "0.13.2"
config = "0.14.0"
tempfile = "3.10.1"
tracing = "0.1.40"


[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[workspace]
members = ["volo-gen"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
# we recommend to use the latest framework version for new features and bug fixes
volo = "*"
volo-build = "*"
volo-thrift = "*"
pilota = "*"

anyhow = "1"
tokio = "1"
